upgraded cert manager

--- a/Lib/Neon.Kube.Setup/Resources/Helm/cert-manager/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/cert-manager/values.yaml
@@ -59,7 +59,7 @@ image:
 
   # Override the image tag to deploy by setting this variable.
   # If no value is set, the chart's appVersion will be used.
-  tag: v1.4.1
+  tag: v1.7.1
 
   # Setting a digest will override any tag
   # digest: sha256:0e072dddd1f7f8fc8909a2ca6f65e76c5f0d2fcfb8be47935ae3457e8bbceb20
@@ -167,7 +167,8 @@ prometheus:
     targetPort: 9402
     path: /metrics
     interval: 60s
-    scrapeTimeout: 30s
+    scrapeTimeout: 30s    
+    honorLabels: false
     labels: {}
 
 # Use these variables to configure the HTTP_PROXY environment variables
@@ -272,7 +273,7 @@ webhook:
 
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
-    tag: v1.4.1
+    tag: v1.7.1
 
     # Setting a digest will override any tag
     # digest: sha256:0e072dddd1f7f8fc8909a2ca6f65e76c5f0d2fcfb8be47935ae3457e8bbceb20
@@ -373,7 +374,7 @@ cainjector:
 
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
-    tag: v1.4.1
+    tag: v1.7.1
 
     # Setting a digest will override any tag
     # digest: sha256:0e072dddd1f7f8fc8909a2ca6f65e76c5f0d2fcfb8be47935ae3457e8bbceb20
