--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/prometheusinstance.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/prometheusinstance.yaml
@@ -7,10 +7,20 @@ metadata:
     agent: grafana-agent
 spec:
   remoteWrite:
-  - url: http://cortex:9009/api/prom/push
-    headers:
-      X-Scope-OrgID: {{ .Values.cluster.name | default "neonkube" }}
-    send_exemplars: true
+    - url: http://cortex:9009/api/prom/push
+      headers:
+        X-Scope-OrgID: {{ .Values.cluster.name | default "neonkube" }}
+      queueConfig:
+        batchSendDeadline: 5m
+        maxBackoff: 1m
+        maxRetries: 3
+        minBackoff: 1m
+      send_exemplars: true
+  maxWALTime: 15m0s
+  minWALTime: 5m0s
+  remoteFlushDeadline: 1m0s
+  walTruncateFrequency: 15m0s
+
   # Supply an empty namespace selector to look in all namespaces. Remove
   # this to only look in the same namespace.
   serviceMonitorNamespaceSelector: {}
