updated clusterissuer version

--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-acme/templates/issuer-neon-acme.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-acme/templates/issuer-neon-acme.yaml
@@ -19,7 +19,7 @@ spec:
   ca:
     secretName: neon-acme-ca
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: neon-acme
