--- a/Lib/Neon.Kube.Google/Neon.Kube.Google.csproj
+++ b/Lib/Neon.Kube.Google/Neon.Kube.Google.csproj
@@ -39,6 +39,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
+		<ProjectReference Include="..\Neon.Kube.GrpcProto\Neon.Kube.GrpcProto.csproj" />
 		<ProjectReference Include="..\Neon.Kube\Neon.Kube.csproj" />
 	</ItemGroup>
 
