--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -40,6 +40,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
         - name: CONTAINERREGISTRY_RECONCILE_REQUEUE_INTERVAL
           value: 5m
         - name: CONTAINERREGISTRY_ERROR_MIN_REQUEUE_INTERVAL
