--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -77,6 +77,7 @@
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Npgsql" Version="6.0.2" />
+		<PackageReference Include="prometheus-net" Version="6.0.0" />
 		<PackageReference Include="SharpCompress" Version="0.30.1" />
 		<PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
 		<PackageReference Include="SSH.NET" Version="2020.0.1" />
