Reduced some minimum requests. Neon Desktop  now works in 8gb

--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -65,6 +65,9 @@
 		<None Remove="Resources\Helm\cert-manager\crds\orders.yaml" />
 		<None Remove="Resources\Helm\cert-manager\templates\cainjector-deployment - Copy.yaml" />
 		<None Remove="Resources\Helm\cert-manager\templates\grafana-dashboard.yaml" />
+		<None Remove="Resources\Helm\cortex\templates\service-headless.yaml" />
+		<None Remove="Resources\Helm\grafana-agent\templates\grafana-dashboard.yaml" />
+		<None Remove="Resources\Helm\grafana-agent\templates\neon-dashboard.yaml" />
 		<None Remove="Resources\Helm\kube-state-metrics\templates\grafana-dashboard.yaml" />
 		<None Remove="Resources\Helm\minio\templates\console-config-env.yaml" />
 		<None Remove="Resources\Helm\minio\templates\grafana-dashboard.yaml" />
