--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -52,7 +52,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Controller\" />
+		<Folder Include="Controllers\" />
 	</ItemGroup>
 
 	<ItemGroup>
